--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Group Members</h1>
     <p>Member 1: Renz Rendel De Arroz</p>
-    <p></p>
+    <p>Member 2: Johann Ross Yap</p>
     <p></p>
 </body>
 </html>
