--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
     <h1>Group Members</h1>
     <p>Member 1: Renz Rendel De Arroz</p>
     <p>Member 2: Johann Ross Yap</p>
-    <p></p>
+    <p>Member 3: EJ Mayor Tolentino</p>
 </body>
 </html>
