--- a/New_Order_Page.html
+++ b/New_Order_Page.html
@@ -93,7 +93,7 @@
         }
 
         .order-form {
-            margin-top: 40px;
+            margin-top: 95px;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -101,14 +101,20 @@
         }
 
         .form-section {
-            flex: 0 1 45%;
+            flex: 1;
             min-width: 300px;
             max-width: 500px;
         }
 
+        .form-sections {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
         input[type="text"],
         select {
-            width: 100%;
+            width: 75%;
             padding: 10px;
             margin-bottom: 25px;
             border: 1px solid #ccc;
@@ -141,8 +147,9 @@
 
         .form-submit {
             width: 100%;
-            text-align: center;
-            margin-top: 30px;
+            margin-top: 50px;
+            display: flex;
+            justify-content: center;
         }
 
         button {
@@ -167,7 +174,7 @@
             padding: 5px 10px;
             font-size: 16px;
             border-radius: 4px;
-            margin: 0 5px;
+            margin: 5px 10px;
             cursor: pointer;
         }
 
@@ -202,86 +209,91 @@
     
     <div class="container">
         <form class="order-form" id="orderForm">
-            <div class="form-section">
-                <label for="customerName">Name:</label>
-                <input type="text" id="customerName" name="customerName" placeholder="Customer Name" required>
+            <!-- Wrap both sections inside a flex container -->
+            <div class="form-sections">
+                <div class="form-section">
+                    <label for="customerName">Name:</label>
+                    <input type="text" id="customerName" name="customerName" placeholder="Customer Name" required>
 
-                <label for="contactNumber">Contact No.:</label>
-                <input type="text" id="contactNumber" name="contactNumber" placeholder="Contact Number" required>
+                    <label for="contactNumber">Contact No.:</label>
+                    <input type="text" id="contactNumber" name="contactNumber" placeholder="Contact Number" required>
 
-                <label for="deliveryType">Pickup/Delivery</label>
-                <select id="deliveryType" name="deliveryType">
-                    <option value="Pickup">Pickup</option>
-                    <option value="Delivery">Delivery</option>
-                </select>
+                    <label for="deliveryType">Pickup/Delivery</label>
+                    <select id="deliveryType" name="deliveryType">
+                        <option value="Pickup">Pickup</option>
+                        <option value="Delivery">Delivery</option>
+                    </select>
 
-                <div id="location-container">
-                    <label for="location">For delivery, enter location:</label>
-                    <input type="text" id="location" name="location" placeholder="Location">
+                    <div id="location-container">
+                        <label for="location">For delivery, enter location:</label>
+                        <input type="text" id="location" name="location" placeholder="Location">
+                    </div>
+                </div>
+
+                <div class="form-section">
+                    <label>Order Weight</label>
+                    <div id="order-weight-controls" aria-labelledby="order-weight-display" style="display: flex; align-items: center; gap: 10px;">
+                        <button type="button" id="weight-decrease" class="qty-btn" aria-label="Decrease weight">-</button>
+                        <span id="order-weight">8</span> kg
+                        <button type="button" id="weight-increase" class="qty-btn" aria-label="Increase weight">+</button>
+                    </div>
+
+                    <div class="addons">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th scope="col">Add Ons</th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col">Quantity</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Towels</td>
+                                    <td>P30</td>
+                                    <td style="display: flex; align-items: center; gap: 8px;">
+                                        <button type="button" class="qty-btn" data-action="decrease" aria-label="Decrease towel quantity">-</button>
+                                        <span class="qty-value">0</span>
+                                        <button type="button" class="qty-btn" data-action="increase" aria-label="Increase towel quantity">+</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Bedsheets/Pillowcases</td>
+                                    <td>P50</td>
+                                    <td style="display: flex; align-items: center; gap: 8px;">
+                                        <button type="button" class="qty-btn" data-action="decrease" aria-label="Decrease bedsheets quantity">-</button>
+                                        <span class="qty-value">0</span>
+                                        <button type="button" class="qty-btn" data-action="increase" aria-label="Increase bedsheets quantity">+</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Comforters</td>
+                                    <td>P75</td>
+                                    <td style="display: flex; align-items: center; gap: 8px;">
+                                        <button type="button" class="qty-btn" data-action="decrease" aria-label="Decrease comforter quantity">-</button>
+                                        <span class="qty-value">0</span>
+                                        <button type="button" class="qty-btn" data-action="increase" aria-label="Increase comforter quantity">+</button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="summary">
+                        <p>Sub Total: <span id="subtotal">PHP 0.00</span></p>
+                        <p id="delivery-fee-text">PHP 50+ Delivery fee</p>
+                        <p>Total Amount: <strong id="total">PHP 0.00</strong></p>
+                    </div>
                 </div>
             </div>
 
-            <div class="form-section">
-                <label>Order Weight</label>
-                <div id="order-weight-controls" aria-labelledby="order-weight-display" style="display: flex; align-items: center; gap: 10px;">
-                    <button type="button" id="weight-decrease" class="qty-btn" aria-label="Decrease weight">-</button>
-                    <span id="order-weight">8</span> kg
-                    <button type="button" id="weight-increase" class="qty-btn" aria-label="Increase weight">+</button>
-                </div>
-
-                <div class="addons">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th scope="col">Add Ons</th>
-                                <th scope="col">Price</th>
-                                <th scope="col">Quantity</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Towels</td>
-                                <td>P30</td>
-                                <td>
-                                    <button type="button" class="qty-btn" data-action="decrease" aria-label="Decrease towel quantity">-</button>
-                                    <span class="qty-value">0</span>
-                                    <button type="button" class="qty-btn" data-action="increase" aria-label="Increase towel quantity">+</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Bedsheets/Pillowcases</td>
-                                <td>P50</td>
-                                <td>
-                                    <button type="button" class="qty-btn" data-action="decrease" aria-label="Decrease bedsheets quantity">-</button>
-                                    <span class="qty-value">0</span>
-                                    <button type="button" class="qty-btn" data-action="increase" aria-label="Increase bedsheets quantity">+</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Comforters</td>
-                                <td>P75</td>
-                                <td>
-                                    <button type="button" class="qty-btn" data-action="decrease" aria-label="Decrease comforter quantity">-</button>
-                                    <span class="qty-value">0</span>
-                                    <button type="button" class="qty-btn" data-action="increase" aria-label="Increase comforter quantity">+</button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="summary">
-                    <p>Sub Total: <span id="subtotal">PHP 0.00</span></p>
-                    <p id="delivery-fee-text">PHP 50+ Delivery fee</p>
-                    <p>Total Amount: <strong id="total">PHP 0.00</strong></p>
-                </div>
-
-                <div class="form-submit">
-                    <button type="submit" id="submit-order">Submit Order</button>
-                </div>
+            <!-- Submit Button now outside the columns -->
+            <div class="form-submit">
+                <button type="submit" id="submit-order">Submit Order</button>
             </div>
         </form>
     </div>
+
    
     <script>
         document.querySelector('.back-button').addEventListener('click', function(e) {
