--- a/Order_History_Page.html
+++ b/Order_History_Page.html
@@ -486,8 +486,8 @@
                 if (!result.success || !result.orders || result.orders.length === 0) {
                     tbody.innerHTML = `
                         <tr>
-                            <td colspan="8" style="text-align: center; padding: 20px">
-                                No completed orders found
+                            <td colspan="10" style="text-align: center; padding: 20px">
+                                No completed orders found.
                             </td>
                         </tr>`;
                     return;
