--- a/Order_Tracker_Page.html
+++ b/Order_Tracker_Page.html
@@ -581,8 +581,8 @@
                     if (tbody.rows.length === 0) {
                         tbody.innerHTML = `
                             <tr>
-                                <td colspan="8" style="text-align: center; padding: 20px;">
-                                    No orders found
+                                <td colspan="10" style="text-align: center; padding: 20px;">
+                                    No orders found.
                                 </td>
                             </tr>`;
                     }
